--- a/css/generalInfo.css
+++ b/css/generalInfo.css
@@ -9,7 +9,7 @@
 #infos_personnelles{
     margin-right: 5%;
     align-items: center;
-    height: 30%;
+    height: 30%; //qnqsjfnsidj
     width: 30%;
     display: flex;
     flex-direction: row;
