--- a/css/footer.css
+++ b/css/footer.css
@@ -1,11 +1,13 @@
 footer {
-	position: absolute; 
-	bottom: 0; 
-	left: 0; 
-	right: 0 ;
+	position: relative;
     color: white;
 	display: flex;
+    bottom : 0;
+    left : 0;
+    right: 0;
+    margin : 0;
     flex-direction: row;
+    margin-top : 50px;
     justify-content: center;
     align-items: center;
     background-color: #223150;
