--- a/css/footer.css
+++ b/css/footer.css
@@ -1,11 +1,10 @@
 footer {
-	position: relative;
+    position: absolute;
     color: white;
-	display: flex;
+    display: flex;
     bottom : 0;
     left : 0;
     right: 0;
-    margin : 0;
     flex-direction: row;
     margin-top : 50px;
     justify-content: center;
@@ -16,7 +15,7 @@ footer {
 }
 
 footer li {
-   list-style: none;
+    list-style: none;
 }
 
 footer ul {
@@ -34,7 +33,7 @@ footer a{
 
 footer a:active{
     color: grey;
- }
+}
 
 footer h3{
     padding-top: 3%;
@@ -54,6 +53,3 @@ footer #autre{
     justify-content: space-between;
     width: 30%;
 }
-
-
-
