--- a/css/footer.css
+++ b/css/footer.css
@@ -1,10 +1,14 @@
+.Footer {
+    display : table;
+    width: 100%;
+    margin: 0; padding: 0;
+}
+
 footer {
-    position: absolute;
+    position: relative;
     color: white;
     display: flex;
-    bottom : 0;
-    left : 0;
-    right: 0;
+    width : 100%;
     flex-direction: row;
     margin-top : 50px;
     justify-content: center;
