--- a/css/menu.css
+++ b/css/menu.css
@@ -25,13 +25,14 @@ header .poutre {
 header .texte {
 	flex : 1;
 	min-width: 180px;
-	padding-top : 8px;
+	padding-top : 0px;
 	border-left: 1px solid black; /*Separation des différentes rubriques*/
 	border-right: 1px solid black;
+	text-decoration: none;
 	/* border-bottom : 2px solid black; */
 }
 
-header .texte:hover a{
+header .texte:hover h1{
 	color: white;
 	font-weight: bold;
 }
@@ -59,12 +60,12 @@ header .boutonMenu {
 	border-right: 1px solid black;
 }
 
-header a{
-	text-decoration: none;
+header h1{
 	color : black;
+	font-size : 17px;
 }
 
-header .texte:active a{ /*Lors du clic sur le bouton si on veut mettre une petite animation*/
+header .texte:active h1{ /*Lors du clic sur le bouton si on veut mettre une petite animation*/
 }
 
 /*changement de couleur du texte un peu et background(opacité),
@@ -186,11 +187,4 @@ font-weight: bold;
 header .submenu li:active a { /* Lors d'un clic sur une sous partie*/
 color: black;
 }
-
-
-@font-face {
-    font-family: 'manjari';
-    src: url("../anciennes_pages/Settings/polices/manjari/Manjari-Bold.ttf") format("truetype");
-    src: url("../anciennes_pages/Settings/polices/manjari/Manjari-Regular.ttf") format("truetype");
-    src: url("../anciennes_pages/Settings/polices/manjari/Manjari-Thin.ttf") format("truetype");
 /*---------------------------------------------------------------------------------------------------------------------------------------------*/
