--- a/css/menu.css
+++ b/css/menu.css
@@ -25,14 +25,13 @@ header .poutre {
 header .texte {
 	flex : 1;
 	min-width: 180px;
-	padding-top : 0px;
+	padding-top : 8px;
 	border-left: 1px solid black; /*Separation des différentes rubriques*/
 	border-right: 1px solid black;
-	text-decoration: none;
 	/* border-bottom : 2px solid black; */
 }
 
-header .texte:hover h1{
+header .texte:hover a{
 	color: white;
 	font-weight: bold;
 }
@@ -60,12 +59,12 @@ header .boutonMenu {
 	border-right: 1px solid black;
 }
 
-header h1{
+header a{
+	text-decoration: none;
 	color : black;
-	font-size : 17px;
 }
 
-header .texte:active h1{ /*Lors du clic sur le bouton si on veut mettre une petite animation*/
+header .texte:active a{ /*Lors du clic sur le bouton si on veut mettre une petite animation*/
 }
 
 /*changement de couleur du texte un peu et background(opacité),
@@ -187,4 +186,11 @@ font-weight: bold;
 header .submenu li:active a { /* Lors d'un clic sur une sous partie*/
 color: black;
 }
+
+
+@font-face {
+    font-family: 'manjari';
+    src: url("../anciennes_pages/Settings/polices/manjari/Manjari-Bold.ttf") format("truetype");
+    src: url("../anciennes_pages/Settings/polices/manjari/Manjari-Regular.ttf") format("truetype");
+    src: url("../anciennes_pages/Settings/polices/manjari/Manjari-Thin.ttf") format("truetype");
 /*---------------------------------------------------------------------------------------------------------------------------------------------*/
