--- a/css/generalData.css
+++ b/css/generalData.css
@@ -7,6 +7,11 @@ h1 {
     margin-bottom: 5%;
 }
 
-#image_graphique, #bouton_graphique {
+#bouton_graphique {
     text-align: center;
+}
+
+#mycontainer{
+    width:60%;
+    height:auto;
 }
