Correction bug menu : -   Augmentation taille du texte des bouttons; -   Suppression du padding du texte des bouttons;

--- a/css/footer.css
+++ b/css/footer.css
@@ -7,14 +7,14 @@
 }
 
 footer {
-    position: relative;
+    position: absolute;
     color: white;
     display: flex;
     bottom : 0;
     width : 100%;
     flex-direction: row;
     margin-top : 50px;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
     background-color: #223150;
     height: 15vh;
