--- a/css/usermanual.css
+++ b/css/usermanual.css
@@ -3,14 +3,16 @@
 	padding-top: 50px;
 }
 .information{
-	margin-top: 200px;
+	margin-top: 5%;
 	margin-left: 20%;
 	margin-right: 10%;
-		width: 60%;
-		min-width: 400px;
-		text-align:justify; 
-
-		border: 1px solid black;
-		word-wrap: break-word;
-		border-radius: 50px;
-		padding : 25px; }
+	width: 60%;
+	min-width: 50%;
+	max-width: 60%;
+	text-align:justify;
+	overflow: auto;
+	max-height: 550px;
+	border: 1px solid black;
+	word-wrap: break-word;
+	border-radius: 50px;
+	padding : 25px; }
